overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1,43 +1,44 @@
 html {
-  font-size: 100%;
-  box-sizing: border-box;
+	font-size: 100%;
+	box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
+	box-sizing: inherit;
 }
 
 :root {
-  /* Primary colors */
-  --P-Bright-Red: hsl(12, 88%, 59%);
-  --p-DarkBlue: hsl(228, 39%, 23%);
+	/* Primary colors */
+	--P-Bright-Red: hsl(12, 88%, 59%);
+	--p-DarkBlue: hsl(228, 39%, 23%);
 
-  /* Neutral colors */
-  --N-Dark-Grayish-Blue: hsl(227, 12%, 61%);
-  --N-Very-Dark-Blue: hsl(233, 12%, 13%);
-  --N-Very-Pale-Red: hsl(13, 100%, 96%);
-  --N-Vary-Light-Gray: hsl(0, 0%, 98%);
+	/* Neutral colors */
+	--N-Dark-Grayish-Blue: hsl(227, 12%, 61%);
+	--N-Very-Dark-Blue: hsl(233, 12%, 13%);
+	--N-Very-Pale-Red: hsl(13, 100%, 96%);
+	--N-Vary-Light-Gray: hsl(0, 0%, 98%);
 }
 
 body {
-  font-family: "Be Vietnam", sans-serif;
-  font-size: 1rem;
-  margin: 0;
-  line-height: 1.6;
+	font-family: 'Be Vietnam', sans-serif;
+	font-size: 1rem;
+	margin: 0;
+	line-height: 1.6;
+	overflow-x: hidden;
 }
 
 img {
-  max-width: 100%;
+	max-width: 100%;
 }
 
 ul {
-  list-style: none;
+	list-style: none;
 }
 
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
 
 h1,
@@ -45,8 +46,8 @@ h2,
 h3,
 h4,
 p {
-  margin: 0;
-  padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 p {
@@ -67,8 +68,8 @@ a {
 }
 
 section {
-  margin: 4em 0;
-  padding: 2em 0;
+	margin: 4em 0;
+	padding: 2em 0;
 }
 
 /* buttons */
@@ -88,65 +89,65 @@ section {
 
 /* general layout */
 .container {
-  width: 90%;
-  max-width: 375px;
-  margin: 0 auto;
+	width: 90%;
+	max-width: 375px;
+	margin: 0 auto;
 }
 
 /* header section */
 
 .header {
-  margin-top: 2.875em;
+	margin-top: 2.875em;
 }
 
 .logo {
-  max-width: 6.875em;
+	max-width: 6.875em;
 }
 
 .navbar {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
 }
 
 .menu {
-  display: none;
+	display: none;
 }
 
 .hamburger {
-  position: relative;
-  width: 1.5rem;
-  height: 1.125rem;
+	position: relative;
+	width: 1.5rem;
+	height: 1.125rem;
 }
 
 .bar {
-  position: absolute;
-  width: 100%;
-  height: 4px;
-  background-color: var(--N-Very-Dark-Blue);
+	position: absolute;
+	width: 100%;
+	height: 4px;
+	background-color: var(--N-Very-Dark-Blue);
 }
 
 .bar::before,
 .bar::after {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  background-color: inherit;
-  width: 100%;
-  height: 4px;
+	position: absolute;
+	content: '';
+	top: 0;
+	left: 0;
+	background-color: inherit;
+	width: 100%;
+	height: 4px;
 }
 
 .bar::before {
-  top: -6px;
+	top: -6px;
 }
 
 .bar::after {
-  top: 6px;
+	top: 6px;
 }
 
 .banner {
-  margin-top: 3em;
+	margin-top: 3em;
 }
 
 .flex {
